--- a/src/lib/styles.css
+++ b/src/lib/styles.css
@@ -1,6 +1,6 @@
 .react-quiz-container {
   margin: 20px;
-  width: 500px;
+  max-width: 1000px;
 }
 
 .react-quiz-container .startQuizWrapper {
@@ -26,8 +26,7 @@
 }
 
 .react-quiz-container .questionWrapper .btn {
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin: 10px;
   border-radius: 4px;
   border: 1px solid #e8e8e8;;
   font-size: 15px;
@@ -72,15 +71,23 @@
 }
 
 .react-quiz-container .answers-container {
-  display: grid;
-  grid-template-columns: 300px 300px;
-  grid-row: auto auto;
-  grid-column-gap: 20px;
-  grid-row-gap: 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
 }
 
+
 .react-quiz-container .answerBtn {
-  width: 100%;
+  max-width: 300px;
+  min-width: 43%;
+}
+
+@media (max-width:480px) {
+  .react-quiz-container .answerBtn {
+    max-width: inherit;
+    min-width: inherit;
+    width: 100%;
+  }
 }
 
 .react-quiz-container .startQuizWrapper .startQuizBtn {
@@ -121,6 +128,9 @@
 
 .react-quiz-container .result-answer {
   padding: 0px 20px;
+  display: flex;
+  flex-wrap: wrap;
+  margin: 20px;
 }
 
 .react-quiz-container .quiz-synopsis {
@@ -155,6 +165,10 @@
 
 .tag-container {
   display: flex;
+}
+
+.react-quiz-container .question-pic {
+  max-width: 500px;
 }
 
 .react-quiz-container .selection-tag,
