--- a/src/lib/styles.css
+++ b/src/lib/styles.css
@@ -206,11 +206,13 @@
   padding: 7px;
   border-radius: 5px;
   color: #ffffff;
+  width:500px;
 }
 
 .react-quiz-container .number-of-selection {
   background: #673AB7;
   margin-left: 5px;
+  width:500px;
 }
 
 .react-quiz-container .selection-tag.single {
